# zarr-perf-rust

./: Cargo.toml
src/: main.rs
